Cabeçalho HTML adicionado

--- a/index.html
+++ b/index.html
@@ -87,7 +87,15 @@
 </p> apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)</p> 
 
 <h1>Hello, World</h1>
-            
+ <p>apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)</p>    
+    $ git commit -m "Adicionadas tags de página HTML padrão"<br/>
+    [main cabd85e] Adicionadas tags de página HTML padrão<br/>
+    3 files changed, 162 insertions(+), 16 deletions(-)<br/>
+      create mode 100644 hello.html<br/>
+
+   </p> apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)</p>    
+$
+
 
 </body>
 </html>
