Atualizando index.html

--- a/index.html
+++ b/index.html
@@ -218,11 +218,25 @@ fefb2aae003ac412197d33ba40f2bd7c2118f450 (origin/main) README.md<br/>
 2bff13f69c6ebfa92e94ca2634b425c0caa693f2 Imagens<br/>
 69916cc2eec7d71ea34de7a2dbbe01541dc3ca4c README.md<br/>
 28d1b1b93547fe5ba2989da4d282a85bc2f1a212 criado README<br/>
-ad711e914f1d71d2a3afe3fc731795f0e19b8728 Initial commit<br/>
+ad711e914f1d71d2a3afe3fc731795f0e19b8728 Initial commit</p>  <br/>
 
-apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)
-$
+   <p></p>  apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)</p>
 
+      <h3>modificações feitas na última semana</h3>
+         <p> para rever as modificações feitas na última semana. Eu adiciono --author=alex se eu quero ver apenas as modificações que eu fiz.</p>  
 
+               git log --all --pretty=format:"%h %cd %s (%an)" --since='7 days ago'</br>  
+
+               PS C:\Users\apros\Documents\GitHub\Repositorio-Git> git log --all --pretty=format:"%h %cd %s (%an)" --since='7 days ago'
+               680862b Wed Mar 3 02:37:34 2021 -0300 README.md (Ana Paula Rosa)</br>  
+               9838082 Wed Mar 3 02:19:52 2021 -0300 Cabeçalho HTML adicionado (Ana Paula Rosa)</br>  
+               cabd85e Wed Mar 3 02:15:31 2021 -0300 Adicionadas tags de página HTML padrão (Ana Paula Rosa)</br>  
+               bf90f11 Wed Mar 3 01:27:36 2021 -0300 primeiro commit (Ana Paula Rosa)</br>  
+               fefb2aa Wed Mar 3 00:41:51 2021 -0300 README.md (Ana Paula Rosa)</br>  
+               2bff13f Wed Mar 3 00:33:32 2021 -0300 Imagens (Ana Paula Rosa)</br>  
+               69916cc Tue Mar 2 21:24:38 2021 -0300 README.md (Ana Paula Rosa)</br>  
+               28d1b1b Tue Mar 2 21:21:14 2021 -0300 criado README (Ana Paula Rosa)</br>  
+               ad711e9 Tue Mar 2 21:00:45 2021 -0300 Initial commit (Ana Paula Rosa)</br>  
+               PS C:\Users\apros\Documents\GitHub\Repositorio-Git></br>  
 </body>
 </html>
