atualizando index.html

--- a/hello.html
+++ b/hello.html
@@ -1,30 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<! DOCTYPE html>
+<html lang = "en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Segundo arquivo</title>
+     <meta charset = "UTF-8">
+     <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
+     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+     <title> Segundo arquivo </title>
 </head>
 <body>
-    <p>apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)</p> 
-     $ git add hello.html<br/>
+     <p> apros @ LAPTOP-DQSJJQQ3 MINGW64 ~ / Documents / GitHub / Repositorio-Git (principal) </p>
+      $ git add hello.html <br/>
 
-    <p> apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)</p> 
-     $ git status<br/>
-     On branch main<br/>
-    Your branch is ahead of 'origin/main' by 1 commit.<br/>
-     (use "git push" to publish your local commits)<br/>
+     <p> apros @ LAPTOP-DQSJJQQ3 MINGW64 ~ / Documents / GitHub / Repositorio-Git (principal) </p>
+      $ git status <br/>
+      No ramal principal <br/>
+     Seu branch está à frente de 'origin / main' em 1 commit. <br/>
+      (use "git push" para publicar seus commits locais) <br/>
 
-Changes to be committed:<br/>
-  (use "git restore --staged <file>..." to unstage)<br/>
-        modified:   README.md<br/>
-        new file:   hello.html<br/>
-        modified:   index.html<br/>
-
-
-    <p> apros@LAPTOP-DQSJJQQ3 MINGW64 ~/Documents/GitHub/Repositorio-Git (main)</p> 
-        
-
-</body>
-</html>
+Alterações a serem confirmadas: <br/>
+   (use "git restore --staged <file> ..." para descompactar) <br/>
+         modificado: README.md <br/>
+         novo arquivo: hello.html <br/>
+         modificado: index.html <br/>
