--- a/hello.html
+++ b/hello.html
@@ -21,3 +21,6 @@ Alterações a serem confirmadas: <br/>
          modificado: README.md <br/>
          novo arquivo: hello.html <br/>
          modificado: index.html <br/>
+
+      </body>
+   </html>
